--- a/projek.html
+++ b/projek.html
@@ -1,5 +1,3 @@
-<!DOCTYPE html>
-<html lang="id">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -31,21 +29,14 @@
         <p>Lezatnya Hidangan, Hangatnya Pelayanan</p>
     </div>
 </section>
-<section id="kontak" class="container my-5">
-    <h2 class="text-center">Hubungi Kami</h2>
-    <div class="row">
-        <div class="col-md-6">
-            <p><strong>Alamat:</strong> Jl. Kuliner No. 10, Jakarta</p>
-            <p><strong>Email:</strong> info@restorankami.com</p>
-            <p><strong>Telepon:</strong> 0812-3456-7890</p>
-        </div>
-        <div class="col-md-6">
-            <form>
-                <input type="text" class="form-control mb-2" placeholder="Nama Anda">
-                <input type="email" class="form-control mb-2" placeholder="Email Anda">
-                <textarea class="form-control mb-2" placeholder="Pesan Anda"></textarea>
-                <button class="btn btn-primary w-100">Kirim</button>
-            </form>
+<section id="kontak" class="bg-light py-5">
+    <div class="container text-center">
+        <h2 class="mb-4">Hubungi Kami</h2>
+        <p><strong>Alamat:</strong> Jl. Kuliner No. 10, Jakarta</p>
+        <p><strong>Email:</strong> info@restorankami.com</p>
+        <p><strong>Telepon:</strong> 0812-3456-7890</p>
+    </div>
+</section>
         </div>
     </div>
 </section>
@@ -110,15 +101,51 @@
                     <p class="card-text">Nikmati kebersamaan dengan paket hemat keluarga.</p>
                     <a href="#" class="btn btn-primary">Lihat Paket</a>
                 </div>
+<section id="pemesanan" class="bg-light py-5">
+    <div class="container">
+        <h2 class="text-center mb-4">Pemesanan Makanan</h2>
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <form>
+                    <div class="mb-3">
+                        <label class="form-label">Nama:</label>
+                        <input type="text" class="form-control" required>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Nomor Telepon:</label>
+                        <input type="text" class="form-control" required>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Pilih Menu:</label>
+                        <select class="form-control">
+                            <option>Nasi Goreng Spesial - Rp 35.000</option>
+                            <option>Steak Sapi - Rp 75.000</option>
+                            <option>Salad Buah - Rp 25.000</option>
+                        </select>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Jumlah:</label>
+                        <input type="number" class="form-control" min="1" required>
+                    </div>
+                    <button type="submit" class="btn btn-primary w-100">Pesan Sekarang</button>
+                </form>
             </div>
         </div>
     </div>
 </section>
-
-<footer class="bg-dark text-white text-center py-3">
-    <p>&copy; 2025 Restoran Kami. All rights reserved.</p>
-</footer>
-
+<section id="galeri" class="container my-5">
+    <h2 class="text-center mb-4">Galeri Restoran</h2>
+    <div class="row">
+        <div class="col-md-4 mb-3">
+            <img src="img/restoran1.jpg" class="img-fluid rounded" alt="Restoran Interior">
+        </div>
+        <div class="col-md-4 mb-3">
+            <img src="img/makanan1.jpg" class="img-fluid rounded" alt="Makanan Lezat">
+        </div>
+        <div class="col-md-4 mb-3">
+            <img src="img/makanan2.jpg" class="img-fluid rounded" alt="Hidangan Spesial">
+        </div>
+    </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
