--- a/projek.html
+++ b/projek.html
@@ -1,111 +1,53 @@
+<!DOCTYPE html>
+<html lang="id">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Restoran Kami</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <title>Restoran XYZ</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container">
-        <a class="navbar-brand" href="#">Restoran Kami</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link active" href="#beranda">Beranda</a></li>
-                <li class="nav-item"><a class="nav-link" href="#kontak">Kontak Kami</a></li>
-                <li class="nav-item"><a class="nav-link" href="#about">About Us</a></li>
-                <li class="nav-item"><a class="nav-link" href="#menu">Menu</a></li>
-            </ul>
+   
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+            <a class="navbar-brand" href="#">Restoran XYZ</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto nav nav-tabs" id="myTab" role="tablist">
+                    <li class="nav-item"><a class="nav-link active" id="beranda-tab" data-bs-toggle="tab" href="#beranda">Beranda</a></li>
+                    <li class="nav-item"><a class="nav-link" id="menu-tab" data-bs-toggle="tab" href="#menu">Menu</a></li>
+                    <li class="nav-item"><a class="nav-link" id="pemesanan-tab" data-bs-toggle="tab" href="#pemesanan">Pemesanan</a></li>
+                    <li class="nav-item"><a class="nav-link" id="galeri-tab" data-bs-toggle="tab" href="#galeri">Galeri</a></li>
+                    <li class="nav-item"><a class="nav-link" id="tentang-tab" data-bs-toggle="tab" href="#tentang">Tentang Kami</a></li>
+                    <li class="nav-item"><a class="nav-link" id="testimoni-tab" data-bs-toggle="tab" href="#testimoni">Testimoni</a></li>
+                    <li class="nav-item"><a class="nav-link" id="reservasi-tab" data-bs-toggle="tab" href="#reservasi">Reservasi</a></li>
+                    <li class="nav-item"><a class="nav-link" id="blog-tab" data-bs-toggle="tab" href="#blog">Blog</a></li>
+                    <li class="nav-item"><a class="nav-link" id="kontak-tab" data-bs-toggle="tab" href="#kontak">Kontak</a></li>
+                </ul>
+            </div>
         </div>
-    </div>
-</nav>
+    </nav>
+    <div class="container py-5">
+        <div class="tab-content" id="myTabContent">
+                     <div class="tab-pane fade show active" id="beranda">
+                <h2 class="text-center">Selamat Datang di Restoran XYZ</h2>
+                <p class="text-center">Tempat terbaik untuk menikmati hidangan lezat dengan suasana nyaman.</p>
+            </div>
 
-<section id="beranda" class="text-center bg-primary text-white py-5">
-    <div class="container">
-        <h1>Selamat Datang di Restoran Kami</h1>
-        <p>Lezatnya Hidangan, Hangatnya Pelayanan</p>
-    </div>
-</section>
-<section id="kontak" class="bg-light py-5">
-    <div class="container text-center">
-        <h2 class="mb-4">Hubungi Kami</h2>
-        <p><strong>Alamat:</strong> Jl. Kuliner No. 10, Jakarta</p>
-        <p><strong>Email:</strong> info@restorankami.com</p>
-        <p><strong>Telepon:</strong> 0812-3456-7890</p>
-    </div>
-</section>
-        </div>
-    </div>
-</section>
-<section id="about" class="bg-light py-5">
-    <div class="container text-center">
-        <h2>Tentang Kami</h2>
-        <p>Menjadi restoran terbaik dengan cita rasa yang tak terlupakan.</p>
-        <h4>Misi</h4>
-        <ul class="list-unstyled">
-            <li>- Menyediakan makanan berkualitas</li>
-            <li>- Memberikan pelayanan terbaik</li>
-            <li>- Menggunakan bahan segar dan sehat</li>
-        </ul>
-    </div>
-</section>
-<section id="menu" class="container my-5">
-    <h2 class="text-center">Menu Kami</h2>
-    <div class="row justify-content-center">
-        <div class="col-sm-6 mb-3">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title">Menu Spesial</h5>
-                    <p class="card-text">Nikmati hidangan spesial dengan cita rasa terbaik.</p>
-                    <a href="#" class="btn btn-primary">Lihat Menu</a>
-                </div>
+            <div class="tab-pane fade" id="menu">
+                <h2 class="text-center">Menu Kami</h2>
+                <ul class="list-group">
+                    <li class="list-group-item">Nasi Goreng Spesial - Rp 35.000</li>
+                    <li class="list-group-item">Steak Sapi - Rp 75.000</li>
+                    <li class="list-group-item">Salad Buah - Rp 25.000</li>
+                </ul>
             </div>
-        </div>
-        <div class="col-sm-6 mb-3">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title">Promo Hari Ini</h5>
-                    <p class="card-text">Dapatkan diskon spesial untuk menu pilihan hari ini.</p>
-                    <a href="#" class="btn btn-primary">Lihat Promo</a>
-                </div>
-            </div>
-        </div>
-    </div>
 
-    <div class="row">
-        <div class="col-md-4 col-sm-6 mb-3">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title">Minuman Segar</h5>
-                    <p class="card-text">Berbagai pilihan minuman segar yang menyegarkan.</p>
-                    <a href="#" class="btn btn-primary">Lihat Menu</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4 col-sm-6 mb-3">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title">Dessert Lezat</h5>
-                    <p class="card-text">Cicipi hidangan pencuci mulut dengan rasa yang menggoda.</p>
-                    <a href="#" class="btn btn-primary">Lihat Menu</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4 col-sm-12 mb-3">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title">Paket Keluarga</h5>
-                    <p class="card-text">Nikmati kebersamaan dengan paket hemat keluarga.</p>
-                    <a href="#" class="btn btn-primary">Lihat Paket</a>
-                </div>
-<section id="pemesanan" class="bg-light py-5">
-    <div class="container">
-        <h2 class="text-center mb-4">Pemesanan Makanan</h2>
-        <div class="row justify-content-center">
-            <div class="col-md-6">
+            <div class="tab-pane fade" id="pemesanan">
+                <h2 class="text-center">Pemesanan Makanan</h2>
                 <form>
                     <div class="mb-3">
                         <label class="form-label">Nama:</label>
@@ -127,25 +69,113 @@
                         <label class="form-label">Jumlah:</label>
                         <input type="number" class="form-control" min="1" required>
                     </div>
-                    <button type="submit" class="btn btn-primary w-100">Pesan Sekarang</button>
+                    <button type="submit" class="btn btn-primary">Pesan Sekarang</button>
                 </form>
             </div>
+            <div class="tab-pane fade" id="galeri">
+                <h2 class="text-center">Galeri Restoran XYZ</h2>
+                <div class="row">
+                    <div class="col-md-4 mb-3">
+                        <img src="c:\Users\user\OneDrive\Dokumen\web design\restoran interior.jpg" class="img-fluid rounded" alt="Restoran Interior">
+                    </div>
+                    <div class="col-md-4 mb-3">
+                        <img src="c:\Users\user\OneDrive\Dokumen\web design\Nasi Goreng (Indonesian Fried Rice) - Sugar Spice & More.jpg" class="img-fluid rounded" alt="Makanan Lezat">
+                    </div>
+                    <div class="col-md-4 mb-3">
+                        <img src="c:\Users\user\OneDrive\Dokumen\web design\menu special.jpg" class="img-fluid rounded" alt="Hidangan Spesial">
+                    </div>
+                </div>
+            </div>
+
+            <div class="tab-pane fade" id="tentang">
+                <h2 class="text-center">Tentang Kami</h2>
+                <p class="text-center">Restoran XYZ telah melayani pelanggan sejak 2005 dengan kualitas terbaik.</p> <br/>
+                <p class="text-center">Restoran ala carte kami menyediakan hidangan yang berkualitas dengan konsep “Pesan, Masak, Sajikan” kami mempunyai visi dan misi yaitu: <br/>
+
+                    Visi: <br/>
+                    Menjadi restoran ala carte terbaik dengan cita rasa autentik dan pelayanan yang terbaik. <br/>
+                    
+                    Misi: <br/>
+                     1. Menyediakan hidangan yang berkualitas tinggi <br/>
+                    2. Memberikan pelayanan profesional <br/>
+                    3. Menjaga kepuasan pelanggan dengan standart yang tinggi. </p><br/>
+            </div>
+
+            <div class="tab-pane fade" id="testimoni">
+                <h2 class="text-center">Testimoni Pelanggan</h2>
+                <blockquote class="blockquote text-center">
+                    <p>"Makanannya enak banget! Pelayanan juga ramah."</p>
+                    <footer class="blockquote-footer">Ayu, Jakarta</footer>
+                </blockquote>
+                <blockquote class="blockquote text-center">
+                    <p>"Tempatnya nyaman, cocok untuk ngumpul bareng teman teman."</p>
+                    <footer class="blockquote-footer">Budi, Bandung</footer>
+                </blockquote>
+                <blockquote class="blockquote text-center">
+                    <p>"Sangat Recomend untuk kumpul bareng keluarga."</p>
+                    <footer class="blockquote-footer">ari, Jakarta</footer>
+                </blockquote>
+            </div>
+            <!-- Reservasi -->
+            <div class="tab-pane fade" id="reservasi">
+                <h2 class="text-center">Reservasi Meja</h2>
+                <form>
+                    <div class="mb-3">
+                        <label class="form-label">Nama:</label>
+                        <input type="text" class="form-control" required>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Nomor Telepon:</label>
+                        <input type="text" class="form-control" required>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Tanggal Reservasi:</label>
+                        <input type="date" class="form-control" required>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Jumlah Orang:</label>
+                        <input type="number" class="form-control" min="1" required>
+                    </div>
+                    <button type="submit" class="btn btn-success">Reservasi Sekarang</button>
+                </form>
+            </div>
+            <div class="tab-pane fade" id="blog">
+                <h2 class="text-center">Rekomendasi Menu</h2>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="card">
+                            <img src="c:\Users\user\OneDrive\Dokumen\web design\menu special.jpg" class="card-img-top" alt="Steak Sapi Spesial">
+                            <div class="card-body">
+                                <h5 class="card-title">Steak Sapi Spesial</h5>
+                                <p class="card-text">Steak Sapi khas restoran kami dengan bumbu spesial dan topping lezat.</p>
+                            </div>
+                        </div>
+                    </div>
+
+            <div class="tab-pane fade" id="kontak">
+                <h2 class="text-center">Hubungi Kami</h2>
+                <form>
+                    <div class="mb-3">
+                        <label class="form-label">Nama:</label>
+                        <input type="text" class="form-control" required>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Email:</label>
+                        <input type="email" class="form-control" required>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Pesan:</label>
+                        <textarea class="form-control" rows="3" required></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Kirim</button>
+                </form>
+            </div>
+
         </div>
     </div>
-</section>
-<section id="galeri" class="container my-5">
-    <h2 class="text-center mb-4">Galeri Restoran</h2>
-    <div class="row">
-        <div class="col-md-4 mb-3">
-            <img src="img/restoran1.jpg" class="img-fluid rounded" alt="Restoran Interior">
-        </div>
-        <div class="col-md-4 mb-3">
-            <img src="img/makanan1.jpg" class="img-fluid rounded" alt="Makanan Lezat">
-        </div>
-        <div class="col-md-4 mb-3">
-            <img src="img/makanan2.jpg" class="img-fluid rounded" alt="Hidangan Spesial">
-        </div>
-    </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
